--- a/project/binary/Cargo.toml
+++ b/project/binary/Cargo.toml
@@ -15,4 +15,5 @@ len-trait = "0.6.1"
 rand = "0.8.5"
 random-string = "1.0.1"
 serde = { version = "1.0.190", features = ["derive"] }
+serialport = "4.2.2"
 tokio = { version = "1.33.0", features = ["net", "rt", "macros", "rt-multi-thread"] }
